# solar-stats

./: .gitignore
doc/examples/hist-fit/: 1D_oscillationFit.json  2D_oscillationFit.json  2D_oscillationFit_DayNight.json
src/: CMakeLists.txt
src/core/: CMakeLists.txt  MSMinimizer.cxx  MSMinimizer.h  MSModel.cxx  MSModel.h  MSModelPulls.cxx  MSModelPulls.h  MSModelTHnBMLF.cxx  MSModelTHnBMLF.h  MSPDFBuilderTHn.cxx  MSPDFBuilderTHn.h  MSParameter.h  MSTHnHandler.cxx  MSTHnHandler.h  MSTHnPDF.h
src/hist-fit/: CMakeLists.txt  MSHistFit.cxx  MSHistFit.hpp  m-stats-hist-fit.cxx
utils/: pdf_builder.cc
